fix(graph): harden graph services and WebSocket auth per review
- iterative DFS and unmodifiable graph views
- fix @Cacheable keys and self-invocation via lazy proxy
- JOIN FETCH user/property in confirmed-booking queries (N+1)
- WebSocket JWT via STOMP CONNECT channel interceptor, origin allowlist
- @Min(1) on limit params, null-safe BFS and price checks
- PropertyMap race fix, align graph tests, drop dead import